--- a/src/app/module/dashboard/dashboard.component.html
+++ b/src/app/module/dashboard/dashboard.component.html
@@ -1,1 +1,35 @@
-<div></div>
+<div>
+    <app-widget-area [data]="bigChart"></app-widget-area>
+</div>
+
+<br>
+
+<mat-divider></mat-divider>
+
+<br>
+
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class="stats-cards">
+    <mat-card fxFlex="25">
+        <app-widget-card label="New Users" total="18k" percentage="50" [data]="Cards"></app-widget-card>
+    </mat-card>
+    <mat-card fxFlex="25" >
+        <app-widget-card label="Users retention" total="10k" percentage="40" [data]="Cards"></app-widget-card>
+    </mat-card>
+    <mat-card fxFlex="25" >
+        <app-widget-card label="Users engagement" total="8k" percentage="38" [data]="Cards"></app-widget-card>
+    </mat-card>
+    <mat-card fxFlex="25">
+        <app-widget-card label="Users" total="18k" percentage="50" [data]="Cards"></app-widget-card>
+    </mat-card>
+</div>
+
+<mat-divider></mat-divider>
+
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px">
+    <div fxFlex="60">
+        <app-widget-table></app-widget-table>
+    </div>
+    <div fxFlex="40">
+        <app-widget-pie [data]="Pie"></app-widget-pie>
+    </div>
+</div>
